Bug fixes, mostly related to Java10.